--- a/ManagersApi/ManagersApi.csproj
+++ b/ManagersApi/ManagersApi.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Macross.Json.Extensions" Version="2.1.0-beta2" />
         <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
