--- a/ManagersApi/ManagersApi.csproj
+++ b/ManagersApi/ManagersApi.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Macross.Json.Extensions" Version="2.1.0-beta2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
