--- a/ManagersApi/ManagersApi.csproj
+++ b/ManagersApi/ManagersApi.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Atlassian.SDK" Version="12.4.0" />
         <PackageReference Include="Macross.Json.Extensions" Version="2.1.0-beta2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
